# Blip

./: .gitattributes  .gitignore  Makefile  eslint.config.js  index.html  menubar.html  package-lock.json  package.json  project.yml  tracker-test.html  tsconfig.app.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml  website.yml
Blip/: AppDelegate.swift  Blip.entitlements  RustBridge.h  WebBridge.swift
BlipNE/: BlipDNSProvider.swift  BlipFilterProvider.swift  BlipNE.entitlements  RuleEngine.swift  SocketBridge.swift
blip-core/: Cargo.toml
blip-core/src/: db.rs  ffi.rs  lib.rs
blip-core/src/dns/: mod.rs
blip-core/src/ne_bridge/: mod.rs
docs/guide/: 00-overview.md  05-glossary.md  10-dns-filtering.md  20-firewall.md  30-hops-routes-and-cables.md  40-bandwidth-and-stats.md  50-limitations-and-pitfalls.md  README.md
native/: project.yml
native/Blip.xcodeproj/: project.pbxproj
scripts/: download-tiles.mjs  generate-hybrid-tiles.py  generate-ocean-tiles.mjs  icon-prompt.txt  reinstall-ne.sh  tiles-to-pmtiles.mjs
src/: App.css  App.tsx  MenuBarApp.css  MenuBarApp.tsx  index.css  main.tsx  map-themes.ts  menubar.tsx
src-tauri/: .gitattributes  Cargo.toml  Entitlements.ne.plist  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/BlipNetworkExtension/: Entitlements.plist  Info.plist  project.yml
src-tauri/BlipNetworkExtension/Sources/: BlipDNSProvider.swift  BlipFilterProvider.swift  DNSHelpers.swift  FlowByteTracker.swift  NEEventTypes.swift  RuleEngine.swift  SocketBridge.swift  main.swift
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: GeoLite2-City.mmdb  blip-dns-helper  blip-ne-manager  dbip-asn.mmdb  libblip_ne_bridge.dylib  ocean.pmtiles  planet.pmtiles  resources  wifi-scan
src-tauri/resources/com.infamousvague.blip.network-extension.systemextension/Contents/: Info.plist
src-tauri/resources/com.infamousvague.blip.network-extension.systemextension/Contents/MacOS/: com.infamousvague.blip.network-extension
src-tauri/scripts/: build-ne.sh  dev-app-wrapper.sh  post-build.sh  reinstall-ne.sh  wifi-scan.swift
src-tauri/src/: db.rs  dock_icon.rs  enrichment.rs  lib.rs  speedtest.rs  state.rs  traceroute.rs
src-tauri/src/blocklist/: mod.rs  updater.rs
src-tauri/src/capture/: nettop.rs
src-tauri/src/commands/: capture.rs  diagnostics.rs  dns.rs  firewall.rs  mod.rs  network.rs  speedtest.rs  system.rs
src-tauri/src/db/: app_registry.rs  blocklists.rs  connections.rs  dns.rs  firewall.rs  mod.rs  preferences.rs  routes.rs  stats.rs  trackers.rs  types.rs
src-tauri/src/dns_capture/: types.rs
src-tauri/src/firewall/: history.rs  mod.rs  profiles.rs  rules.rs  scoring.rs  sync.rs  types.rs  whitelist.rs
src-tauri/src/geoip/: mod.rs
src-tauri/src/ne_bridge/: handlers.rs  mod.rs  types.rs
src-tauri/src/wifi/: analysis.rs  macos.rs  mod.rs
src-tauri/swift/: BlipNEBridge.swift  BlipNEManager.swift
website/: index.html  tsconfig.json  vite.config.ts
(+264 files in other folders)
