[package]
name = "blip-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "blip_core"
crate-type = ["staticlib"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
maxminddb = "0.24"
uuid = { version = "1", features = ["v4"] }
dns-lookup = "2"
lru = "0.12"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
