[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
base64 = "0.22"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-geolocation = "2.3.2"
tokio = { version = "1", features = ["full"] }
maxminddb = "0.24"
uuid = { version = "1", features = ["v4"] }
dns-lookup = "2"
lru = "0.12"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
pcap = "2"
libloading = "0.8"

[[bin]]
name = "blip-dns-helper"
path = "src/dns_capture/helper_main.rs"
